# SPDX-FileCopyrightText: Copyright 2024 Arm Limited and/or its affiliates <open-source-office@arm.com>
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "arm-pl011-uart"
version = "0.1.0"
authors = [
    "Balint Dobszay <balint.dobszay@arm.com>",
    "Imre Kis <imre.kis@arm.com>",
]
description = "Arm PrimeCell UART (PL011) driver"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://git.trustedfirmware.org/rust-spmc/arm-pl011-uart.git"
keywords = ["arm", "pl011", "uart", "driver"]
categories = ["hardware-support", "embedded", "no-std", "no-std::no-alloc"]
readme = "README.md"

[dependencies]
bitflags = "2.6"
embedded-hal-nb = "1.0"
embedded-io = "0.6"
