# SPDX-FileCopyrightText: Copyright 2024 Arm Limited and/or its affiliates <open-source-office@arm.com>
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "arm-pl011-uart"
version = "0.2.0"
authors = [
    "Balint Dobszay <balint.dobszay@arm.com>",
    "Imre Kis <imre.kis@arm.com>",
    "Andrew Walbran <qwandor@google.com>",
]
description = "Arm PrimeCell UART (PL011) driver"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://git.trustedfirmware.org/rust-spmc/arm-pl011-uart.git"
keywords = ["arm", "pl011", "uart", "driver"]
categories = ["hardware-support", "embedded", "no-std", "no-std::no-alloc"]
readme = "README.md"
rust-version = "1.82"

[dependencies]
bitflags = "2.8"
derive-mmio = "0.3.0"
embedded-hal-nb = { version = "1.0", optional = true }
embedded-io = { version = "0.6", optional = true }
safe-mmio = "0.1.0"
thiserror = { version = "2.0", default-features = false }
zerocopy = { version = "0.8", features = ["derive"] }

[features]
default = ["embedded-hal-nb", "embedded-io"]
